welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:9: error: not found: value motifsuivant
override def run() {for (i<-1 to 3) {for (j <- 1 to 3) {motif();motifsuivant()};changeLigne()}
                                                                ^