welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
def coupstylo(c:Color) {setCouleurBrosse(c);baisseBrosse();leveBrosse()}

def faireV(c:Color) {avance();coupstylo(c);avance();droite();avance();coupstylo(c);recule();droite();avance();coupstylo(c);avance();droite()}

def motif() {faireV(Color.YELLOW);faireV(Color.GREEN);faireV(Color.RED);faireV(Color.BLUE)}
def changeLigne() {gauche();for (i <- 1 to 6) {avance};droite()}
def motifSuivant() {for (i<-1 to 6) {avance}}

override def run() {for (i<-1 to 3) {for (j <- 1 to 3) {motif();motifsuivant()};changeLigne()}
}